--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <servlet-mapping>
         <servlet-name>AllProductsServlet</servlet-name>
         <url-pattern>/products</url-pattern>
-<!--        <url-pattern>/*</url-pattern>-->
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -47,22 +47,22 @@
         <url-pattern>/products/search</url-pattern>
     </servlet-mapping>
 
-<!--    <servlet>-->
-<!--        <servlet-name>login-servlet</servlet-name>-->
-<!--        <servlet-class>com.podzirei.onlineshop.web.servlets.LoginServlet</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>login-servlet</servlet-name>-->
-<!--        <url-pattern>/login</url-pattern>-->
-<!--    </servlet-mapping>-->
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.podzirei.onlineshop.web.servlets.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 
-<!--    <filter>-->
-<!--        <filter-name>security-filter</filter-name>-->
-<!--        <filter-class>com.podzirei.onlineshop.web.security.SecurityFilter</filter-class>-->
-<!--    </filter>-->
-<!--    <filter-mapping>-->
-<!--        <filter-name>security-filter</filter-name>-->
-<!--        <url-pattern>/</url-pattern>-->
-<!--    </filter-mapping>-->
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.podzirei.onlineshop.web.security.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
