migration to web.xml

--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,6 @@
     </properties>
 
     <dependencies>
-        <!-- servlets -->
-<!--        <dependency>-->
-<!--            <groupId>jakarta.servlet</groupId>-->
-<!--            <artifactId>jakarta.servlet-api</artifactId>-->
-<!--            <version>5.0.0-M2</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -30,6 +23,7 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
 
         <!-- web -->
         <dependency>
@@ -92,16 +86,6 @@
 
     <build>
 
-<!--    <pluginManagement>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-war-plugin</artifactId>-->
-<!--                <version>3.3.1</version>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </pluginManagement>-->
-
     <plugins>
 
         <!-- tomcat7-plugin -->
@@ -115,22 +99,16 @@
             </configuration>
         </plugin>
 
-        <!-- maven-compiler-plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.10.1</version>
-            <configuration>
-                <target>17</target>
-                <source>17</source>
-            </configuration>
-        </plugin>
-
         <!-- jetty server -->
         <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>11.0.9</version>
+            <version>9.4.49.v20220914</version>
+            <configuration>
+                <httpConnector>
+                    <port>8080</port>
+                </httpConnector>
+            </configuration>
         </plugin>
 
     </plugins>
