--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.23</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -24,6 +31,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- IoC -->
+        <dependency>
+            <groupId>com.study</groupId>
+            <artifactId>ioc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- web -->
         <dependency>
@@ -42,7 +55,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.4</version>
+            <version>42.5.0</version>
         </dependency>
 
         <!-- lombok -->
@@ -82,35 +95,47 @@
             <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
 
-    <plugins>
+        <plugins>
 
-        <!-- tomcat7-plugin -->
-        <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
-            <configuration>
-                <port>8080</port>
-                <path>/</path>
-            </configuration>
-        </plugin>
-
-        <!-- jetty server -->
-        <plugin>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>9.4.49.v20220914</version>
-            <configuration>
-                <httpConnector>
+            <!-- tomcat7-plugin -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
                     <port>8080</port>
-                </httpConnector>
-            </configuration>
-        </plugin>
+                    <path>/</path>
+                </configuration>
+            </plugin>
 
-    </plugins>
+            <!-- jetty server -->
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.49.v20220914</version>
+                <configuration>
+                    <httpConnector>
+                        <port>8080</port>
+                    </httpConnector>
+                </configuration>
+            </plugin>
+
+        </plugins>
     </build>
 </project>
