--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha14</version>
+            <version>1.4.4</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- tests -->
