--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,6 @@
             <version>5.3.23</version>
         </dependency>
 
-        <!-- spring-data-jpa -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-
         <!-- spring-context -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -108,6 +101,12 @@
             <artifactId>spring-test</artifactId>
             <version>5.3.23</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
