--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ db.driver-class-name=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:7000/postgres
 db.username=postgres
 db.password=password
+
+#spring.mvc.view.prefix=templates/pages/
+#spring.mvc.view.suffix=.html
+
+spring.freemarker.template-loader-path=/
+spring.freemarker.suffix=.ftl
